Added Game class to start simple poker game